Adding README.md file and chnages in packaghe.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v11",
   "version": "1.0.0",
-  "description": "Version 11 for YelpCamp",
+  "description": "Campgrounds",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
